--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.4.0",
     "formik": "^2.4.2",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.13.0",
+    "recharts": "^2.7.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
